Termino de estilar pantalla de seleccionar-ataque

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="seleccionar-ataque">
         <div class="presentacion">
-            <img id="isologo" src="./img/isologo.png" alt="">
+            <a href="./index.html"><img id="isologo"  src="./img/isologo.png" alt=""></a>
             <h2 class="titulo">Mokepon!</h2>
         </div>
         
