Agrego estilos en media queries.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="div-mascota div-hipodoge">
                     <input type="radio" name="mascota" id="hipodoge">
                     <label for="hipodoge"><img id="mascota-img" src="./img/hipodoge.png" alt=""></label>
-                    <label for="hipodoge"> Hipodoge </label>
+                    <label for="hipodoge"> <p id="nepe">Hipodoge</p>  </label>
                 </div>
 
                 <div class="div-mascota div-capipepo">
