Estilos principales terminados.

--- a/index.html
+++ b/index.html
@@ -24,20 +24,26 @@
             <div class="div-mascotas">
                 <div class="div-mascota div-hipodoge">
                     <input type="radio" name="mascota" id="hipodoge">
-                    <label for="hipodoge"><img id="mascota-img" src="./img/hipodoge.png" alt=""></label>
-                    <label for="hipodoge"> <p id="nepe">Hipodoge</p>  </label>
+                    <label for="hipodoge">
+                        <img id="mascota-img" src="./img/hipodoge.png" alt="">
+                        <p>hipodoge</p>
+                    </label>
                 </div>
 
                 <div class="div-mascota div-capipepo">
                     <input type="radio" name="mascota" id="capipepo">
-                    <label for="capipepo"><img id="mascota-img" src="./img/capipepo.png" alt=""></label>
-                    <label id="label-id-capipepo" for="capipepo">Capipepo</label>
+                    <label for="capipepo">
+                        <img id="mascota-img" src="./img/capipepo.png" alt="">
+                        <p>Capipepo</p>
+                    </label>
                 </div>
 
                 <div class="div-mascota div-ratigueya">
                     <input type="radio" name="mascota" id="ratigueya">
-                    <label for="ratigueya"><img id="mascota-img" src="./img/ratigueya.png" alt=""></label>
-                    <label id="label-id-ratigueya" for="ratigueya">Ratigueya</label>
+                    <label for="ratigueya">
+                        <img id="mascota-img" src="./img/ratigueya.png" alt="">
+                        <p>Ratigueya</p>
+                    </label>
                 </div>
             </div>
 
