Mejoro estilos y logica de seleccionar-mascota.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
 <header class="header">
-    <h1 class="header__title">Mokepon</h1>
+    <h1 class="header__title">Mokepon!</h1>
 </header>
 
 <main>
-    <section id="selectPet">
+    <section id="seleccionar-mascota" class="selectPet">
         <article class="selectPet__article">
             <h2 class="selectPet__subtitle">Selecciona tu mascota</h2>
 
@@ -28,6 +28,8 @@
             </div>
         </article>
     </section>
+
+
     <section id="seleccionar-ataque">
         <article class="seleccionar-ataque-article">
             <article class="seleccionar-ataque-article-up">
@@ -78,7 +80,26 @@
 </main>
 
 <footer>
-    
+    <section class="footer__container">
+        <article class="footer__txt">
+            <p>Proyecto propuesto en el curso “Nuevo Curso Gratis de Programación Básica” en platzi.com</p>
+        </article>
+        <article class="footer__title">
+            <div class="footer__title--up">
+                <img class="footerTitle__up--img" src="./img/otros/icon3.png" alt="">
+            </div>
+            <div class="footer__title--down">
+                <p class="footerTitle__down--txtname">mokepon!</p>
+                <p class="footerTitle__down--txt">by sebastian boari</p>
+            </div>
+        </article>
+        <article class="footer__social">
+            <a class="footer__social--link" target="_blank" href="https://platzi.com/home"><img class="footer__social--img" src="./img/otros/platziicon.webp" alt="Icono de platzi"></a>
+            <a class="footer__social--link" target="_blank" href="https://platzi.com/escuela/escuela-web/"><img class="footer__social--img" src="./img/otros/desarrollowebicon.webp" alt="Icono de la escuela de desarrollo web de platzi"></a>
+            <a class="footer__social--link" target="_blank" href="https://www.linkedin.com/in/sebastian-boari-825111224/"><img class="footer__social--img" src="./img/otros/linkedinicon.png" alt="Icono de linkedin"></a>
+            <a class="footer__social--link" target="_blank" href="https://github.com/SebastianBoari"><img class="footer__social--img" src="./img/otros/githubicon.png" alt="Icono de github"></a>
+        </article>
+    </section>
 </footer>
     
     <script src="./js/mokepon.js"></script>
